Primera limpieza de fotos pesadas

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="teams">
             <div class="innerTeam t1">
                 <div class="newTeam t1">
-                    <img src="img/teams/atlantaHawks.png" alt="">
+                    <img src="img/teamsComp/atlantaHawks.png" alt="">
                 </div>
                 <div class="oldTeam t1">
                     <img src="img/oldTeams/hawksOld.png" alt="">
@@ -87,7 +87,7 @@
             </div>
             <div class="innerTeam t2">
                 <div class="newTeam t2">
-                    <img src="img/teams/bostonCeltics.png" alt="">
+                    <img src="img/teamsComp/bostonCeltics.png" alt="">
                 </div>
                 <div class="oldTeam t2">
                     <img src="img/oldTeams/bostonOld.png" alt="">
@@ -95,7 +95,7 @@
             </div>
             <div class="innerTeam t3">
                 <div class="newTeam t3">
-                    <img src="img/teams/brooklynNets.png" alt="">
+                    <img src="img/teamsComp/brooklynNets.png" alt="">
                 </div>
                 <div class="oldTeam t3">
                     <img src="img/oldTeams/newJerseyNets.png" alt="">
@@ -103,7 +103,7 @@
             </div>
             <div class="innerTeam t4">
                 <div class="newTeam t4">
-                    <img src="img/teams/charlotteHornets.png" alt="">
+                    <img src="img/teamsComp/charlotteHornets.png" alt="">
                 </div>
                 <div class="oldTeam t4">
                     <img src="img/oldTeams/charlotteBobcats.png" alt="">
@@ -111,7 +111,7 @@
             </div>
             <div class="innerTeam t5">
                 <div class="newTeam t5">
-                    <img src="img/teams/chicagoBulls.png" alt="">
+                    <img src="img/teamsComp/chicagoBulls.png" alt="">
                 </div>
                 <div class="oldTeam t5">
                     <img src="img/oldTeams/sameChicago.png" alt="">
@@ -119,7 +119,7 @@
             </div>
             <div class="innerTeam t6">
                 <div class="newTeam t6">
-                    <img src="img/teams/clevelandCavaliers.png" alt="">
+                    <img src="img/teamsComp/clevelandCavaliers.png" alt="">
                 </div>
                 <div class="oldTeam t6">
                     <img src="img/oldTeams/clevelandCavOld.png" alt="">
@@ -127,7 +127,7 @@
             </div>
             <div class="innerTeam t7">
                 <div class="newTeam t7">
-                    <img src="img/teams/dallasMavericks.png" alt="">
+                    <img src="img/teamsComp/dallasMavericks.png" alt="">
                 </div>
                 <div class="oldTeam t7">
                     <img src="img/oldTeams/dallasMavsOld.png" alt="">
@@ -135,7 +135,7 @@
             </div>
             <div class="innerTeam t8">
                 <div class="newTeam t8">
-                    <img src="img/teams/denverNuggets.png" alt="">
+                    <img src="img/teamsComp/denverNuggets.png" alt="">
                 </div>
                 <div class="oldTeam t8">
                     <img src="img/oldTeams/denverRockets.png" alt="">
@@ -143,7 +143,7 @@
             </div>
             <div class="innerTeam t9">
                 <div class="newTeam t9">
-                    <img src="img/teams/detroitPistons.png" alt="">
+                    <img src="img/teamsComp/detroitPistons.png" alt="">
                 </div>
                 <div class="oldTeam t9">
                     <img src="img/oldTeams/fortWaynePistons.png" alt="">
@@ -151,7 +151,7 @@
             </div>
             <div class="innerTeam t10">
                 <div class="newTeam t10">
-                    <img src="img/teams/goldenStateWarriors.png" alt="">
+                    <img src="img/teamsComp/goldenStateWarriors.png" alt="">
                 </div>
                 <div class="oldTeam t10">
                     <img src="img/oldTeams/philadelphiaWarriors.png" alt="">
@@ -159,7 +159,7 @@
             </div>
             <div class="innerTeam t11">
                 <div class="newTeam t11">
-                    <img src="img/teams/houstonRockets.png" alt="">
+                    <img src="img/teamsComp/houstonRockets.png" alt="">
                 </div>
                 <div class="oldTeam t11">
                     <img src="img/oldTeams/sanDiegoRockets.png" alt="">
@@ -167,7 +167,7 @@
             </div>
             <div class="innerTeam t12">
                 <div class="newTeam t12">
-                    <img src="img/teams/indianaPacers.png" alt="">
+                    <img src="img/teamsComp/indianaPacers.png" alt="">
                 </div>
                 <div class="oldTeam t12">
                     <img src="img/oldTeams/indianaOld.png" alt="">
@@ -175,7 +175,7 @@
             </div>
             <div class="innerTeam t13">
                 <div class="newTeam t13">
-                    <img src="img/teams/losAngelesClippers.png" alt="">
+                    <img src="img/teamsComp/losAngelesClippers.png" alt="">
                 </div>
                 <div class="oldTeam t13">
                     <img src="img/oldTeams/buffaloBraves.png" alt="">
@@ -183,7 +183,7 @@
             </div>
             <div class="innerTeam t14">
                 <div class="newTeam t14">
-                    <img src="img/teams/losAngelesLakers.png" alt="">
+                    <img src="img/teamsComp/losAngelesLakers.png" alt="">
                 </div>
                 <div class="oldTeam t14">
                     <img src="img/oldTeams/minneapolisLakers.png" alt="">
@@ -191,7 +191,7 @@
             </div>
             <div class="innerTeam t15">
                 <div class="newTeam t15">
-                    <img src="img/teams/memphisGrizzlies.png" alt="">
+                    <img src="img/teamsComp/memphisGrizzlies.png" alt="">
                 </div>
                 <div class="oldTeam t15">
                     <img src="img/oldTeams/vancouverGrizzlies.png" alt="">
@@ -199,7 +199,7 @@
             </div>
             <div class="innerTeam t16">
                 <div class="newTeam t16">
-                    <img src="img/teams/miamiHeat.png" alt="">
+                    <img src="img/teamsComp/miamiHeat.png" alt="">
                 </div>
                 <div class="oldTeam t16">
                     <img src="img/oldTeams/miamiOld.png" alt="">
@@ -207,7 +207,7 @@
             </div>
             <div class="innerTeam t17">
                 <div class="newTeam t17">
-                    <img src="img/teams/milwaukeeBucks.png" alt="">
+                    <img src="img/teamsComp/milwaukeeBucks.png" alt="">
                 </div>
                 <div class="oldTeam t17">
                     <img src="img/oldTeams/milwaukeeOld.png" alt="">
@@ -215,7 +215,7 @@
             </div>
             <div class="innerTeam t18">
                 <div class="newTeam t18">
-                    <img src="img/teams/minnesotaTimberwolves.png" alt="">
+                    <img src="img/teamsComp/minnesotaTimberwolves.png" alt="">
                 </div>
                 <div class="oldTeam t18">
                     <img src="img/oldTeams/minnesotaTimberwolvesOld.png" alt="">
@@ -223,7 +223,7 @@
             </div>
             <div class="innerTeam t19">
                 <div class="newTeam t19">
-                    <img src="img/teams/newOrleansPelicans.png" alt="">
+                    <img src="img/teamsComp/newOrleansPelicans.png" alt="">
                 </div>
                 <div class="oldTeam t19">
                     <img src="img/oldTeams/newOrleansHornetsOldPelicans.png" alt="">
@@ -231,7 +231,7 @@
             </div>
             <div class="innerTeam t20">
                 <div class="newTeam t20">
-                    <img src="img/teams/newYorkKnicks.png" alt="">
+                    <img src="img/teamsComp/newYorkKnicks.png" alt="">
                 </div>
                 <div class="oldTeam t20">
                     <img src="img/oldTeams/newYorkKnicksOld.png" alt="">
@@ -239,7 +239,7 @@
             </div>
             <div class="innerTeam t21">
                 <div class="newTeam t21">
-                    <img src="img/teams/oklahomaThunder.png" alt="">
+                    <img src="img/teamsComp/oklahomaThunder.png" alt="">
                 </div>
                 <div class="oldTeam t21">
                     <img src="img/oldTeams/seattleSupersonics.png" alt="">
@@ -247,7 +247,7 @@
             </div>
             <div class="innerTeam t22">
                 <div class="newTeam t22">
-                    <img src="img/teams/orlandoMagic.png" alt="">
+                    <img src="img/teamsComp/orlandoMagic.png" alt="">
                 </div>
                 <div class="oldTeam t22">
                     <img src="img/oldTeams/orlandoMagic.png" alt="">
@@ -255,7 +255,7 @@
             </div>
             <div class="innerTeam t23">
                 <div class="newTeam t23">
-                    <img src="img/teams/philadelphia76ers.png" alt="">
+                    <img src="img/teamsComp/philadelphia76ers.png" alt="">
                 </div>
                 <div class="oldTeam t23">
                     <img src="img/oldTeams/syracuseNationals.png" alt="">
@@ -263,7 +263,7 @@
             </div>
             <div class="innerTeam t24">
                 <div class="newTeam t24">
-                    <img src="img/teams/phoenixSuns3.png" alt="">
+                    <img src="img/teamsComp/phoenixSuns3.png" alt="">
                 </div>
                 <div class="oldTeam t24">
                     <img src="img/oldTeams/phoenixSunsOld.png" alt="">
@@ -271,7 +271,7 @@
             </div>
             <div class="innerTeam t25">
                 <div class="newTeam t25">
-                    <img src="img/teams/portlandTrailBlazers.png" alt="">
+                    <img src="img/teamsComp/portlandTrailBlazers.png" alt="">
                 </div>
                 <div class="oldTeam t25">
                     <img src="img/oldTeams/portlandTrailBlazersOld.png" alt="">
@@ -279,7 +279,7 @@
             </div>
             <div class="innerTeam t26">
                 <div class="newTeam t26">
-                    <img src="img/teams/sacramentoKings.png" alt="">
+                    <img src="img/teamsComp/sacramentoKings.png" alt="">
                 </div>
                 <div class="oldTeam t26">
                     <img src="img/oldTeams/rochesterRoyals.png" alt="">
@@ -287,7 +287,7 @@
             </div>
             <div class="innerTeam t27">
                 <div class="newTeam t27">
-                    <img src="img/teams/sanAntonioSpurs.png" alt="">
+                    <img src="img/teamsComp/sanAntonioSpurs.png" alt="">
                 </div>
                 <div class="oldTeam t27">
                     <img src="img/oldTeams/sanAntonioSpurs.png" alt="">
@@ -295,7 +295,7 @@
             </div>
             <div class="innerTeam t28">
                 <div class="newTeam t28">
-                    <img src="img/teams/torontoRaptors.png" alt="">
+                    <img src="img/teamsComp/torontoRaptors.png" alt="">
                 </div>
                 <div class="oldTeam t28">
                     <img src="img/oldTeams/torontoRaptors.png" alt="">
@@ -303,7 +303,7 @@
             </div>
             <div class="innerTeam t29">
                 <div class="newTeam t29">
-                    <img src="img/teams/utahJazz.png" alt="">
+                    <img src="img/teamsComp/utahJazz.png" alt="">
                 </div>
                 <div class="oldTeam t29">
                     <img src="img/oldTeams/newOrleansJazz.png" alt="">
@@ -311,7 +311,7 @@
             </div>
             <div class="innerTeam t30">
                 <div class="newTeam t30">
-                    <img src="img/teams/washingtonWizards.png" alt="">
+                    <img src="img/teamsComp/washingtonWizards.png" alt="">
                 </div>
                 <div class="oldTeam t30">
                     <img src="img/oldTeams/baltimoreBullets.png" alt="">
