Tercera Limpieza de imagenes

--- a/html/kobe.html
+++ b/html/kobe.html
@@ -44,10 +44,10 @@
             <div class="sliderKobe">
                 <ul>
                     <li>
-                        <img src="../img/sliderKobe/kobe8jump.jpg" alt="">    
+                        <img src="../img/kobe/kobe8jump.jpg" alt="">    
                     </li>
                     <li>
-                        <img src="../img/sliderKobe/kobe24.jpg" alt="">
+                        <img src="../img/kobe/kobe24.jpg" alt="">
                     </li>
                 </ul>
             </div>
