--- a/html/kobe.html
+++ b/html/kobe.html
@@ -44,10 +44,10 @@
             <div class="sliderKobe">
                 <ul>
                     <li>
-                        <img src="../img/kobe/kobe8jump.jpg" alt="">    
+                        <img loading="lazy" src="../img/kobeComp/kobe8jump.jpg" alt="">    
                     </li>
                     <li>
-                        <img src="../img/kobe/kobe24.jpg" alt="">
+                        <img loading="lazy" src="../img/kobeComp/kobe24.jpg" alt="">
                     </li>
                 </ul>
             </div>
@@ -86,10 +86,10 @@
             <div class="sliderGigi">
                 <ul>
                     <li>
-                        <img src="../img/gigi/gigi1.jpg" alt="">    
+                        <img loading="lazy" src="../img/gigiComp/gigi1.jpg" alt="">    
                     </li>
                     <li>
-                        <img src="../img/gigi/gigi2.jpg" alt="">
+                        <img loading="lazy" src="../img/gigiComp/gigi2.jpg" alt="">
                     </li>
                 </ul>
             </div>
@@ -98,7 +98,7 @@
     <footer>
         <div class="finalInfo">
             <div class="copyright">
-                <p>&copy;2020 <a href="index.html">NBA MINDS</a></p>
+                <p>&copy;2020 <a href="kobe.html">NBA MINDS</a></p>
             </div>
             <div class="socialMedia">
                 <a href="https://www.facebook.com/" target="_blank">
