--- a/html/masInfo.html
+++ b/html/masInfo.html
@@ -345,7 +345,7 @@
     <footer>
         <div class="finalInfo">
             <div class="copyright">
-                <p>&copy;2020 <a href="index.html">NBA MINDS</a></p>
+                <p>&copy;2020 <a href="masInfo.html">NBA MINDS</a></p>
             </div>
             <div class="socialMedia">
                 <a href="https://www.facebook.com/" target="_blank">
