Página de Kobe y Gigi acabado con posibles implementaciones en el futuro

--- a/html/kobe.html
+++ b/html/kobe.html
@@ -61,14 +61,15 @@
                         cuatro hijas del ex-jugador Kobe
                         Bryant, la cual a sus tan sólo 13
                         años de edad ya era una gran
-                        aficionada al deporte,
+                        aficionada al deporte, 
                         especialmente el baloncesto. 
                         Jugaba actualmente con el dorsal 
-                        número 2 en el equipo creado por
-                        su propio padre llamado MAMBA. El sueño 
-                        de esta pequeña era llegar a jugar la 
-                        liga femenina de Uconn Huskies y en un 
-                        futuro quien sabe tal vez a la WNBA dado el 
+                        número 2 en el equipo creado por 
+                        su propio padre llamado MAMBA. El 
+                        sueño de esta pequeña era llegar a 
+                        jugar la liga femenina de Uconn 
+                        Huskies y en un futuro quien sabe 
+                        tal vez a la WNBA dado el 
                         gran talento que tenía y que su padre 
                         reconocía a diario.
                     </p>
@@ -76,7 +77,21 @@
                 <div class="and">
                     <p>&</p>
                 </div>
-                <div class="kobeBox"></div>
+                <div class="kobeBox">
+                    <h2>KOBE BRYANT</h2>
+                    <p>Kobe Bryant fue un jugador de baloncesto
+                        profesional que disputó veinte
+                        temporadas en la NBA, todas ellas en el equipo de
+                        Los Angeles Lakers desde el año 1996 hasta
+                        2016 en los cúales consiguió 5 años anillos
+                        de campeón y un montón de logros y premios a nivel individual.
+                        Tenía una familia formada por su esposa Vanessa Laine Bryant y
+                        sus cuatro hijas, una de ellas Gianna Bryant
+                        la cual compartía su gran pasión por el baloncesto
+                        y que le hizo volver a las canchas como espectador
+                        para compartir momentos con ella.
+                    </p>
+                </div>
             </div>
         </article>
         <div class="gigi">
