Cambios mínimos lakers

--- a/html/kobe.html
+++ b/html/kobe.html
@@ -39,7 +39,7 @@
     <main>
         <div class="kobe">
             <div class="fondoKobe">
-                <video src="../videos/tributoKobe3.mp4" autoplay muted loop><p>KOBE BRYANT</p></video>
+                <video src="../videos/tributoKobe3.mp4" autoplay muted loop></video>
             </div>
             <div class="sliderKobe">
                 <ul>
@@ -55,7 +55,7 @@
         <article>
             <div class="kobeAndGigi">
                 <div class="gigiBox">
-                    <h2>GIANNA BRYANT</h2>
+                    <h2>GIANNA BRYANT #2</h2>
                     <p>Gianna Bryant o también conocida
                         como Gigi era la segunda de las
                         cuatro hijas del ex-jugador Kobe
@@ -78,7 +78,7 @@
                     <p>&</p>
                 </div>
                 <div class="kobeBox">
-                    <h2>KOBE BRYANT</h2>
+                    <h2>#8 KOBE BRYANT #24</h2>
                     <p>Kobe Bryant fue un jugador de baloncesto
                         profesional que disputó veinte
                         temporadas en la NBA, todas ellas en el equipo de
