--- a/html/masInfo.html
+++ b/html/masInfo.html
@@ -23,7 +23,7 @@
             <div class="botones">
                 <ul>
                     <li>
-                        <a href="html/hazañas.html">Hazañas</a>
+                        <a href="estrellas.html">Estrellas NBA</a>
                     </li>
                     <li>
                         <a href="kobe.html">Kobe & Gigi</a>
