Mas cosas de Estrellas NBA

--- a/html/estrellas.html
+++ b/html/estrellas.html
@@ -36,8 +36,18 @@
     </header>
     <main>
         <div class="contenedorFondo">
-            <div class="lebronJames"></div>
-            <div class="michaelJordan"></div>
+            <div class="lebronJames">
+                <div class="lebronPerfil"></div>
+                <div class="lebronNombre"></div>
+            </div>
+            <div class="michaelJordan">
+                <div class="michaelPerfil"></div>
+                <div class="michaelNombre"></div>
+            </div>
+            <div class="kareemAbdul">
+                <div class="kareemPerfil"></div>
+                <div class="kareemNombre"></div>
+            </div>
         </div>
     </main>
     <footer>
