Few changes about NBA stars and lebron

--- a/html/estrellas.html
+++ b/html/estrellas.html
@@ -38,7 +38,9 @@
         <div class="contenedorFondo">
             <div class="lebronJames">
                 <div class="lebronPerfil"></div>
-                <div class="lebronNombre"></div>
+                <div class="lebronNombre">
+                    <p>LEBRON JAMES</p>
+                </div>
             </div>
             <div class="michaelJordan">
                 <div class="michaelPerfil"></div>
