Acabados los botones de jugadores

--- a/html/estrellas.html
+++ b/html/estrellas.html
@@ -36,20 +36,32 @@
     </header>
     <main>
         <div class="contenedorFondo">
-            <div class="lebronJames">
+            <div class="lebronJames" id="lebronJames">
                 <div class="lebronPerfil"></div>
                 <div class="lebronNombre">
                     <p>LEBRON JAMES</p>
                 </div>
             </div>
-            <div class="michaelJordan">
+            <div class="lebronAwards">
+            </div>
+            <div class="vidaPersonal"></div>
+            <div class="michaelJordan" id="michaelJordan">
                 <div class="michaelPerfil"></div>
-                <div class="michaelNombre"></div>
+                <div class="michaelNombre">
+                    <p>MICHAEL JORDAN</p>
+                </div>
             </div>
-            <div class="kareemAbdul">
+            <div class="michaelAwards">
+            </div>
+            <div class="vidaPersonal"></div>
+            <div class="kareemAbdul" id="kareemAbdul">
                 <div class="kareemPerfil"></div>
-                <div class="kareemNombre"></div>
+                <div class="kareemNombre">
+                    <p>KAREEM ABDUL-JABBAR</p>
+                </div>
             </div>
+            <div class="kareemAwards"></div>
+            <div class="vidaPersonal"></div>
         </div>
     </main>
     <footer>
@@ -74,3 +86,5 @@
         </div>
     </footer>
 </body>
+
+<script src="../js/lebron/buttonLebron.js" type="text/javascript"></script>
