Nuevos cambios y creo que fixeado el problema del % en el translateX

--- a/html/estrellas.html
+++ b/html/estrellas.html
@@ -36,6 +36,10 @@
     </header>
     <main>
         <div class="contenedorFondo">
+            <div class="flechas Lebron">
+                <p>></p>
+                <p><</p>
+            </div>
             <div class="lebronJames" id="lebronJames">
                 <div class="lebronPerfil"></div>
                 <div class="lebronNombre">
@@ -45,6 +49,10 @@
             <div class="lebronAwards">
             </div>
             <div class="vidaPersonal"></div>
+            <div class="flechas Michael">
+                <p>></p>
+                <p><</p>
+            </div>
             <div class="michaelJordan" id="michaelJordan">
                 <div class="michaelPerfil"></div>
                 <div class="michaelNombre">
@@ -54,6 +62,10 @@
             <div class="michaelAwards">
             </div>
             <div class="vidaPersonal"></div>
+            <div class="flechas Kareem">
+                <p>></p>
+                <p><</p>
+            </div>
             <div class="kareemAbdul" id="kareemAbdul">
                 <div class="kareemPerfil"></div>
                 <div class="kareemNombre">
