Introducción de info jugadores

--- a/html/estrellas.html
+++ b/html/estrellas.html
@@ -45,10 +45,30 @@
                 <div class="lebronNombre">
                     <p>LEBRON JAMES</p>
                 </div>
+                <p class="dorsal1">#23</p>
             </div>
             <div class="lebronAwards">
             </div>
-            <div class="vidaPersonal"></div>
+            <div class="vidaPersonal Lebron">
+                <h2>GIANNA BRYANT #2</h2>
+                    <p>Gianna Bryant o también conocida
+                        como Gigi era la segunda de las
+                        cuatro hijas del ex-jugador Kobe
+                        Bryant, la cual a sus tan sólo 13
+                        años de edad ya era una gran
+                        aficionada al deporte, 
+                        especialmente el baloncesto. 
+                        Jugaba actualmente con el dorsal 
+                        número 2 en el equipo creado por 
+                        su propio padre llamado MAMBA. El 
+                        sueño de esta pequeña era llegar a 
+                        jugar la liga femenina de Uconn 
+                        Huskies y en un futuro quien sabe 
+                        tal vez a la WNBA dado el 
+                        gran talento que tenía y que su padre 
+                        reconocía a diario.
+                    </p>
+            </div>
             <div class="flechas Michael">
                 <p>></p>
                 <p><</p>
@@ -58,10 +78,30 @@
                 <div class="michaelNombre">
                     <p>MICHAEL JORDAN</p>
                 </div>
+                <p class="dorsal2">#23</p>
             </div>
             <div class="michaelAwards">
             </div>
-            <div class="vidaPersonal"></div>
+            <div class="vidaPersonal Michael">
+                <h2>GIANNA BRYANT #2</h2>
+                    <p>Gianna Bryant o también conocida
+                        como Gigi era la segunda de las
+                        cuatro hijas del ex-jugador Kobe
+                        Bryant, la cual a sus tan sólo 13
+                        años de edad ya era una gran
+                        aficionada al deporte, 
+                        especialmente el baloncesto. 
+                        Jugaba actualmente con el dorsal 
+                        número 2 en el equipo creado por 
+                        su propio padre llamado MAMBA. El 
+                        sueño de esta pequeña era llegar a 
+                        jugar la liga femenina de Uconn 
+                        Huskies y en un futuro quien sabe 
+                        tal vez a la WNBA dado el 
+                        gran talento que tenía y que su padre 
+                        reconocía a diario.
+                    </p>
+            </div>
             <div class="flechas Kareem">
                 <p>></p>
                 <p><</p>
@@ -71,9 +111,29 @@
                 <div class="kareemNombre">
                     <p>KAREEM ABDUL-JABBAR</p>
                 </div>
+                <p class="dorsal3">#33</p>
             </div>
             <div class="kareemAwards"></div>
-            <div class="vidaPersonal"></div>
+            <div class="vidaPersonal Kareem">
+                <h2>GIANNA BRYANT #2</h2>
+                    <p>Gianna Bryant o también conocida
+                        como Gigi era la segunda de las
+                        cuatro hijas del ex-jugador Kobe
+                        Bryant, la cual a sus tan sólo 13
+                        años de edad ya era una gran
+                        aficionada al deporte, 
+                        especialmente el baloncesto. 
+                        Jugaba actualmente con el dorsal 
+                        número 2 en el equipo creado por 
+                        su propio padre llamado MAMBA. El 
+                        sueño de esta pequeña era llegar a 
+                        jugar la liga femenina de Uconn 
+                        Huskies y en un futuro quien sabe 
+                        tal vez a la WNBA dado el 
+                        gran talento que tenía y que su padre 
+                        reconocía a diario.
+                    </p>
+            </div>
         </div>
     </main>
     <footer>
