Terminadas todas las fotos, me falta ajustar el texto y escribir información

--- a/html/estrellas.html
+++ b/html/estrellas.html
@@ -48,6 +48,19 @@
                 <p class="dorsal1">#23</p>
             </div>
             <div class="lebronAwards">
+                <h2>#8 KOBE BRYANT #24</h2>
+                    <p>Kobe Bryant fue un jugador de baloncesto
+                        profesional que disputó veinte
+                        temporadas en la NBA, todas ellas en el equipo de
+                        Los Angeles Lakers desde el año 1996 hasta
+                        2016 en los cúales consiguió 5 años anillos
+                        de campeón y un montón de logros y premios a nivel individual.
+                        Tenía una familia formada por su esposa Vanessa Laine Bryant y
+                        sus cuatro hijas, una de ellas Gianna Bryant
+                        la cual compartía su gran pasión por el baloncesto
+                        y que le hizo volver a las canchas como espectador
+                        para compartir momentos con ella.
+                    </p>
             </div>
             <div class="vidaPersonal Lebron">
                 <h2>GIANNA BRYANT #2</h2>
@@ -81,6 +94,19 @@
                 <p class="dorsal2">#23</p>
             </div>
             <div class="michaelAwards">
+                <h2>#8 KOBE BRYANT #24</h2>
+                    <p>Kobe Bryant fue un jugador de baloncesto
+                        profesional que disputó veinte
+                        temporadas en la NBA, todas ellas en el equipo de
+                        Los Angeles Lakers desde el año 1996 hasta
+                        2016 en los cúales consiguió 5 años anillos
+                        de campeón y un montón de logros y premios a nivel individual.
+                        Tenía una familia formada por su esposa Vanessa Laine Bryant y
+                        sus cuatro hijas, una de ellas Gianna Bryant
+                        la cual compartía su gran pasión por el baloncesto
+                        y que le hizo volver a las canchas como espectador
+                        para compartir momentos con ella.
+                    </p>
             </div>
             <div class="vidaPersonal Michael">
                 <h2>GIANNA BRYANT #2</h2>
@@ -113,7 +139,21 @@
                 </div>
                 <p class="dorsal3">#33</p>
             </div>
-            <div class="kareemAwards"></div>
+            <div class="kareemAwards">
+                <h2>#8 KOBE BRYANT #24</h2>
+                    <p>Kobe Bryant fue un jugador de baloncesto
+                        profesional que disputó veinte
+                        temporadas en la NBA, todas ellas en el equipo de
+                        Los Angeles Lakers desde el año 1996 hasta
+                        2016 en los cúales consiguió 5 años anillos
+                        de campeón y un montón de logros y premios a nivel individual.
+                        Tenía una familia formada por su esposa Vanessa Laine Bryant y
+                        sus cuatro hijas, una de ellas Gianna Bryant
+                        la cual compartía su gran pasión por el baloncesto
+                        y que le hizo volver a las canchas como espectador
+                        para compartir momentos con ella.
+                    </p>
+            </div>
             <div class="vidaPersonal Kareem">
                 <h2>GIANNA BRYANT #2</h2>
                     <p>Gianna Bryant o también conocida
