Arreglado texto de la página inicial

--- a/index.html
+++ b/index.html
@@ -51,12 +51,26 @@
                     <p>Bienvenidos a NBA MINDS, el lugar donde hablamos
                         sobre temas candentes y de actualidad de la NBA
                         como los récords que están batiendo las nuevas 
-                        estrellas de la liga. Así como antiguas hazañas 
+                        estrellas de la liga. Así como hazañas 
                         de viejas glorias que pasaron por la mejor liga 
-                        de baloncesto del mundo.
+                        de baloncesto del mundo. Aquí debajo les dejamos
+                        los actuales logos de los 30 equipos que forman la
+                        NBA con sus respectivos logos de épocas pasadas.
                     </p>
                 </div>
-                <div class="secondText"></div>
+                <div class="secondText">
+                    <p>Esperamos que se diviertan
+                        con todas las novedades e historias
+                        de los grandes jugadores que han pisado
+                        la NBA y al leerlo os deje la misma sensación
+                        que cuando tu entrenador te llama para debutar
+                        tu primer minuto en una liga en la que muy pocos
+                        alcanzan. Cualquier duda no dudes en mándarnos un
+                        formulario en la pestaña de más información que se
+                        encuentra en la esquina superior derecha. Saludos
+                        desde NBA Minds.
+                    </p>
+                </div>
             </div>
         </div>
     </section>
