Acaba la página principal en principio

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
                         NBA con sus respectivos logos de épocas pasadas.
                     </p>
                 </div>
+                <div class="flecha1">
+                    <p>>></p>
+                </div>
                 <div class="secondText">
                     <p>Esperamos que se diviertan
                         con todas las novedades e historias
